# advent-of-code-2020

./: Makefile  README.md  pyproject.toml
advent_of_code_2020/: day_1.py  day_10.py  day_10_test.py  day_11.py  day_11_test.py  day_12.py  day_12_test.py  day_1_test.py  day_2.py  day_3.py  day_4.py  day_4_test.py  day_5.py  day_5_test.py  day_6.py  day_6_test.py  day_7.py  day_7_test.py  day_8.py  day_8_test.py  day_9.py  day_9_test.py  template_module.py  template_test.py
puzzles/: day_10.md  day_11.md  day_12.md  day_2.md  day_3.md  day_4.md  day_6.md  day_7.md  day_8.md  day_9.md
